tests/lean/hidingInaccessibleNames.lean.expected.out
hidingInaccessibleNames.lean:2:16-2:17: error: Placeholder could not be inferred.

context:
x✝¹ : Nat
x✝ : [] ≠ []
⊢ Nat
hidingInaccessibleNames.lean:3:19-3:20: error: Placeholder could not be inferred.

context:
a b x✝¹ : Nat
x✝ : [a, b] ≠ []
⊢ Nat
hidingInaccessibleNames.lean:4:15-4:16: error: Placeholder could not be inferred.

context:
x✝² : List Nat
x✝¹ : Nat
x✝ : x✝² ≠ []
⊢ Nat
hidingInaccessibleNames.lean:8:16-8:17: error: Placeholder could not be inferred.

context:
x✝¹ : Nat
x✝ : [] ≠ []
⊢ Nat
hidingInaccessibleNames.lean:9:19-9:20: error: Placeholder could not be inferred.

context:
a b x✝¹ : Nat
x✝ : [a, b] ≠ []
⊢ Nat
hidingInaccessibleNames.lean:10:16-10:17: error: Placeholder could not be inferred.

context:
x✝² : List Nat
x✝¹ : Nat
x✝ : x✝² ≠ []
⊢ Nat
case inl
p q : Prop
h✝ : p
⊢ q ∨ p

case inr
p q : Prop
h✝ : q
⊢ q ∨ p
hidingInaccessibleNames.lean:23:25-23:26: error: Placeholder could not be inferred.

context:
p✝ : Prop
h✝ x✝ : p✝
⊢ decide p✝ = true
hidingInaccessibleNames.lean:27:17-27:18: error: Placeholder could not be inferred.

context:
a✝ : Char
⊢ a✝.val = a✝.val
